--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
   "require": {
     "php": ">=5.5"
   },
+  "require-dev": {
+    "phpunit/phpunit": "10"
+  },
   "autoload": {
     "psr-4": {
       "Shift4\\": "lib/Shift4/"
