--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
         uses: php-actions/phpunit@v3.0.0
         with:
           args: tests
+          test_suffix: Test.php
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           PUBLIC_KEY: ${{ secrets.PUBLIC_KEY }}
