--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,10 @@ jobs:
       - name: PHP Composer
         uses: php-actions/composer@v6
       - name: Tests
-        uses: php-actions/phpunit@v3
+        uses: php-actions/phpunit@v3.0.0
         with:
           args: tests
+          test_suffix: Test.php
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           PUBLIC_KEY: ${{ secrets.PUBLIC_KEY }}
